--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@capacitor/core": "^6.2.1",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@google/genai": "latest",
+    "@libsql/client": "^0.15.15",
     "@react-oauth/google": "^0.13.4",
+    "drizzle-orm": "^0.45.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
